Tiny swagger cleanup
