# confckurator/src/api/model/UpdateTemplateVariablesCreate.ts
@@ -3,24 +3,22 @@
  * Confckurator Client/Server API
  *
  * OpenAPI spec version: 1.0.0
- * 
+ *
  *
  * NOTE: This class is auto generated by the swagger code generator program.
  * https://github.com/swagger-api/swagger-codegen.git
  * Do not edit the class manually.
  */
 
-import * as models from './models';
+export interface UpdateTemplateVariablesCreate {
+  /**
+   * Unique name of the variable.
+   */
+  name: string;
 
-export interface NewVariable {
-    /**
-     * Unique name of the variable.
-     */
-    name: string;
-
-    /**
-     * Variable description (e.g. constraints).
-     */
-    description: string;
+  /**
+   * Variable description (e.g. constraints).
+   */
+  description: string;
 
 }
