# confckurator/src/api/model/models.ts
@@ -5,14 +5,13 @@ export * from './IdResponse';
 export * from './NewEnvironment';
 export * from './NewPack';
 export * from './NewTemplate';
-export * from './NewVariable';
 export * from './Pack';
 export * from './Template';
 export * from './TemplateInstance';
 export * from './UpdateTemplate';
 export * from './UpdateTemplateVariables';
+export * from './UpdateTemplateVariablesCreate';
 export * from './UpdateTemplateVariablesUpdate';
-export * from './UpdateVariable';
 export * from './Value';
 export * from './Variable';
 export * from './VariableValueUpdate';
