# server/static/swagger/api.yml
@@ -463,29 +463,6 @@ definitions:
       text:
         type: string
         description: Template text.
-  NewVariable:
-    type: object
-    required:
-      - name
-      - description
-    properties:
-      name:
-        type: string
-        description: Unique name of the variable.
-        minLength: 1
-        maxLength: 255
-        pattern: "^[a-zA-Z_][a-zA-Z0-9_]*$"
-      description:
-        type: string
-        description: Variable description (e.g. constraints).
-  UpdateVariable:
-    type: object
-    required:
-      - description
-    properties:
-      description:
-        type: string
-        description: Variable description (e.g. constraints).
   UpdateTemplate:
     type: object
     properties:
@@ -514,13 +491,30 @@ definitions:
                   type: integer
                 name:
                   type: string
+                  description: Unique name of the variable.
+                  minLength: 1
+                  maxLength: 255
+                  pattern: "^[a-zA-Z_][a-zA-Z0-9_]*$"
                 description:
                   type: string
           create:
             type: array
-            description: Variables to update.
+            description: Variables to create.
             items:
-              $ref: "#/definitions/NewVariable"
+              type: object
+              required:
+                - name
+                - description
+              properties:
+                name:
+                  type: string
+                  description: Unique name of the variable.
+                  minLength: 1
+                  maxLength: 255
+                  pattern: "^[a-zA-Z_][a-zA-Z0-9_]*$"
+                description:
+                  type: string
+                  description: Variable description (e.g. constraints).
   NewEnvironment:
     type: object
     required:
